    propigating "case_sensitive=False" breaks that.  Other fixes to quoting
    when using labels and "fake" column objects
  - added a "supports_execution()" method to ClauseElement, so that individual
  kinds of clauses can express if they are appropriate for executing...such as, 
  you can execute a "select", but not a "Table" or a "Join".
- orm:
  - another refactoring to relationship calculation.  Allows more accurate ORM behavior
  with relationships from/to/between mappers, particularly polymorphic mappers,
  also their usage with Query, SelectResults.  
  tickets include [ticket:439], [ticket:441], [ticket:448].
  - implemented foreign_keys argument to mapper [ticket:385].  use in conjunction with
  primaryjoin/secondaryjoin arguments to specify/override foreign keys defined on the
  Table instance.
  - eager relation to an inheriting mapper wont fail if no rows returned for
  the relationship.
  - fix for very large topological sorts, courtesy ants.aasma at gmail [ticket:423]
  - eager loading is slightly more strict about detecting "self-referential"
  relationships, specifically between polymorphic mappers.
  - improved support for complex queries embedded into "where" criterion
  for query.select() [ticket:449]
  - contains_eager('foo') automatically implies eagerload('foo')
  - fixed bug where cascade operations incorrectly included deleted collection
  items in the cascade [ticket:445]
  - fix to deferred so that load operation doesnt mistakenly occur when only
  PK col attributes are set
  - added support for py2.5 "with" statement with SessionTransaction [ticket:468]
- oracle:
  - when returning "rowid" as the ORDER BY column or in use with ROW_NUMBER OVER,
  oracle dialect checks the selectable its being applied to and will switch to 
  table PK if not applicable, i.e. for a UNION.  checking for DISTINCT, GROUP BY
  (other places that rowid is invalid) still a TODO.  allows polymorphic mappings
  to function, [ticket:436]